[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Save_Script.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )
game_save_class = ExtResource( 3 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 521.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "XXXXXXXXXXXX
X..........X
X..........X
XXDXXXXXXXXX
X..........X
XXXXXXXXXXXX"
autowrap = true
clip_text = true

[node name="StatusLabel" type="Label" parent="VSplitContainer"]
margin_top = 521.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 2 )
text = "1 . . . . . . . . X"

[node name="NotificationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="NotificationTimer" to="." method="_on_NotificationTimer_timeout"]
